--- a/applet/paper_shopv/pages/goods-details/index.wxml
+++ b/applet/paper_shopv/pages/goods-details/index.wxml
@@ -3,14 +3,14 @@
    <view class="swiper-container">
         <swiper class="swiper_box" 
                     autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" bindchange="swiperchange">
-            <block wx:for="{{goodsDetail.pics}}" wx:key="id">
+            <block wx:for="{{goodsDetail.carousel}}" wx:key="id">
                 <swiper-item>
                     <image src="{{item.pic}}" class="slide-image" width="355" height="150" mode="aspectFit" lazy-load="true"/>
                 </swiper-item>
             </block>
         </swiper>
         <view class="dots">  
-            <block wx:for="{{goodsDetail.pics}}" wx:key="unique">  
+            <block wx:for="{{goodsDetail.carousel}}" wx:key="unique">  
                 <view class="dot{{index == swiperCurrent ? ' active' : ''}}"></view>  
             </block>  
         </view>  
